--- a/src/Todo.css
+++ b/src/Todo.css
@@ -9,9 +9,11 @@
 }
 .dlt-icon {
 	cursor: pointer;
-	color: cornflowerblue;
+	opacity: 0.7;
+	color: #2196f3;
 	font-size: 2rem !important;
 }
 .dlt-icon:hover {
-	opacity: 0.7;
+	opacity: 1;
+	color: #2196f3;
 }
